`Refactor navbar layout and styles across multiple files`

--- a/styles/global/navbar.css
+++ b/styles/global/navbar.css
@@ -10,6 +10,7 @@ header > div > div {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: auto 15%;
 }
 
 header a {
