--- a/styles/global/footer.css
+++ b/styles/global/footer.css
@@ -3,7 +3,7 @@ footer {
 }
 
 .site-footer {
-    background-color: #26272b;
+    background-color: #123524;
     padding: 45px 0 20px;
     font-size: 15px;
     line-height: 24px;
