`Refactor HTML and CSS files for calculator functionality`

--- a/styles/home/style.css
+++ b/styles/home/style.css
@@ -15,14 +15,17 @@
 
 .banner {
     display: flex;
-    flex-direction: column;
     justify-content: center;
-    align-items: center;
+
+    margin: auto 20px;
 
     > div {
-        width: 55%;
+        width: 930px;
     }
 
+    @media (max-width: 40.0525em) {
+        margin: auto 10px;
+    }
 }
 
 .top-banner {
@@ -36,7 +39,6 @@
 .top-banner .banner-text {
     color: white;
     margin: 0;
-    max-width: 100%;
     background-color: #3E7B27;
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
     padding: 30px;
@@ -56,9 +58,13 @@
 .bottom-banner {
     display: flex;
     justify-content: space-between;
-    width: 100%;
     gap: 53px;
     color: #EFE3C2;
+
+    @media (max-width: 710px) {
+        flex-direction: column;
+        gap: 20px;
+    }
 }
 
 .bottom-banner .card-left, .bottom-banner .card-right {
@@ -68,7 +74,7 @@
     flex-direction: row;
     align-items: center;
     gap: 20px;
-    width: 100%;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
 
     border-bottom: 5px solid #858585;
 
@@ -84,8 +90,6 @@
         font-size: 19px;
         font-weight: 500;
         color: #123524;
-        max-width: 80%;
+        width: 80%;
     }
 }
-
-
