--- a/styles/global/navbar.css
+++ b/styles/global/navbar.css
@@ -5,18 +5,29 @@ header {
 }
 
 header > div {
-    display: grid !important;
-    grid-template-rows: repeat(1, 1fr);
+    display: flex !important;
     padding: 1rem 2rem;
     background-color: #123524;
+    justify-items: center;
     gap: 20px;
+    flex-direction: column;
+    align-items: center;
 }
 
 header > div > div {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: auto 30%;
+    width: 100%;
+    max-width: 960px;
+
+    @media (min-width: 48.0625em) {
+        margin: 0 32px;
+    }
+
+    @media (min-width: 1024px) {
+        margin: 0 auto;
+    }
 }
 
 header a {
@@ -56,4 +67,8 @@ header a:hover {
 
 .bottom-nav {
     padding-bottom: 10px;
+
+    @media (max-width: 520px) {
+        #home { display: none; }
+    }
 }
