--- a/styles/global/navbar.css
+++ b/styles/global/navbar.css
@@ -43,7 +43,18 @@ header a:hover {
 .nav-logo {
     height: 40px;
     width: 113px;
-    background-color: #ddd;
+    
+    .header-logo {
+        background-image: url('../../images/home/header/1.png');
+        /* background-image: url('../../images/home/header/2.png'); */
+        /* background-image: url('../../images/home/header/3.png'); */
+        /* background-image: url('../../images/home/header/4.png'); */
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        width: 100%;
+        height: 100%;
+    }
 }
 
 .nav-item {
