--- a/styles/calc/style.css
+++ b/styles/calc/style.css
@@ -1,10 +1,34 @@
-.shell > .card-container {
+.center-container {
+    h1 {
+        font-weight: bold;
+        padding-bottom: 10px;
+    }
+
+    p, li {
+        font-weight: 300;
+    }
+}
+
+.start-now {
+    background-color: #3E7B27;
+    color: white;
+    padding: 20px;
+    font-size: 18px;
+    font-weight: bold;
+    border-radius: 5px;
+    cursor: pointer;
+    border: none;
+    border-bottom: 3px solid #000;
+}
+
+.extra-to a {
+    text-decoration: underline;
+    cursor: pointer;
+    color: black;
+}
+
+ul {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    margin: 0 auto;
-    padding: 0;
-    width: 100%;
-    max-width: 1200px;
+    flex-direction: column;
+    gap: 15px;
 }
