--- a/styles/global/footer.css
+++ b/styles/global/footer.css
@@ -1,6 +1,7 @@
 footer {
     border-top: 1px solid #e5e5e5;
     box-shadow: 0px -4px 22px 0px #00000085;
+    margin-top: auto 0;
 }
 
 .site-footer {
