--- a/styles/home/style.css
+++ b/styles/home/style.css
@@ -8,7 +8,7 @@
     height: 450px;
     background-color: #2E4709;
 
-    background-image: url("/images/home/banner/banner.jpeg");
+    background-image: url("../../images/home/banner/banner.jpeg");
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
