--- a/styles/calc/style.css
+++ b/styles/calc/style.css
@@ -43,3 +43,17 @@ ul {
         color: black;
     }
 }
+
+.q_input {
+    padding: 20px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+    border: 1px solid #000;
+    width: 350px;
+    font-size: larger;
+    font-weight: bold;
+}
+
+.r_34 {
+    /* padding: 20px; */
+}
