--- a/styles/calc/style.css
+++ b/styles/calc/style.css
@@ -19,6 +19,7 @@
     cursor: pointer;
     border: none;
     border-bottom: 3px solid #000;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.2);
 }
 
 .extra-to a {
@@ -109,4 +110,38 @@ ul {
     &:is(.severe) { background-color: #FF9B53; }
     &:is(.very-severe) { background-color: #FF5353; }
     &:is(.failure) { background-color: #AA0000; }
+}
+
+.selected {
+    animation: spin 2.5s infinite linear;
+    background:
+    /* Background colors don’t work with `background-origin`, so use a gradient. */
+    linear-gradient(
+        to bottom,#3E7B27, #3E7B27
+    )
+      padding-box, /* ends at inner border edges */
+    conic-gradient(
+        from var(--bg-angle) in oklch longer hue,
+        oklch(0.85 0.37 0) 0 0
+    )
+      border-box; /* extends to outer border edges */
+
+    /* a clear border lets the background gradient shine through */
+    border-bottom: 3px solid transparent;
+}
+
+@property --bg-angle {
+    inherits: false;
+    initial-value: 0deg;
+    syntax: "<angle>";
+}
+
+/**
+   * To animate the gradient, we set the custom property to 1 full
+   * rotation. The animation starts at the default value of `0deg`.
+   */
+@keyframes spin {
+    to {
+        --bg-angle: 360deg;
+    }
 }
