--- a/styles/calc/style.css
+++ b/styles/calc/style.css
@@ -56,7 +56,7 @@ ul {
 }
 
 #egfr-bar {
-    width: 630px;
+    max-width: 630px;
     height: 29px;
     border: 1px solid #000;
     border-radius: 5px;
