added guard scripts and renamed packages

--- a/styles/dashboard/style.css
+++ b/styles/dashboard/style.css
@@ -1,3 +1,26 @@
 .top-nav {
     border-bottom: transparent !important;
 }
+
+.dashboard {
+    margin-top: 20px;
+}
+
+.sb_012 {
+    background-color: #123524 !important;
+    padding: 20px;
+    color: white;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.mo_4 {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    
+    i {
+        width: 32px;
+        height: 32px;
+    }
+}
