--- a/styles/global/footer.css
+++ b/styles/global/footer.css
@@ -39,6 +39,7 @@ footer {
 }
 
 .footer-links {
+    margin-top: 10px;
     padding-left: 0;
     list-style: none
 }
@@ -60,6 +61,10 @@ footer {
 
 .footer-links.inline li {
     display: inline-block
+}
+
+.site-footer .text-justify {
+    margin-top: 10px;
 }
 
 .site-footer .social-icons {
