--- a/styles/dashboard/style.css
+++ b/styles/dashboard/style.css
@@ -1,26 +1,93 @@
-.top-nav {
-    border-bottom: transparent !important;
+/* // */
+/* ! Body Wrapper ! */
+.wrapper {
+    /* display: flex; */
+}
+/* // */
+/* // */
+/* ! Nav Bar ! */
+aside {
+    width: 250px;
+    height: 100vh;
+    background-color: #123524;
+    padding: 20px;
+    position: fixed !important;
+    left: 0;
+    top: 0;
 }
 
-.dashboard {
+.navbar-default {
+    background-color: transparent !important;
+    border-color: transparent !important;
+    height: 100%;
+}
+
+.container-fluid {
+    height: 100%;
+}
+
+.space-out {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+}
+
+.flexNav {
+    display: flex;
+    flex-direction: column;
+}
+
+.navbar-nav {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 100%;
+}
+
+li a, .logout {
+    color: #fff !important;
+    font-size: 1.2em;
+    padding: 10px 15px;
+    text-decoration: none;
+    transition: 0.3s;
+    font-weight: 600;
+    display: flex !important;
+    align-items: center;
+    gap: 10px;
+    border-radius: 5px;
+}
+
+li a:hover, .logout:hover {
+    background-color: #1d5736;
+    text-decoration: none;
+}
+
+.navbar-default .navbar-nav>.active>a {
+    color: #fff !important;
+    background-color: #3e7c2e !important;
+    border: 1px solid #3e7c2e !important;
+    border-radius: 5px;
+}
+
+.nav-logo {
+    margin-bottom: 20px;
     margin-top: 20px;
 }
 
-.sb_012 {
-    background-color: #123524 !important;
-    padding: 20px;
-    color: white;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+.logout {
+    margin-bottom: 20px;
+    background-color: #2d4436;
+    border: 1px solid #2d4436;
 }
 
-.mo_4 {
-    position: absolute;
-    top: 20px;
-    left: 20px;
-    
-    i {
-        width: 32px;
-        height: 32px;
-    }
+.logout:hover {
+    background-color: #1d2c23;
+}
+/* // */
+
+/* // */
+/* ! Main Content ! */
+.container {
+    margin-top: 20px;
 }
