Refactors clinician dashboard and improves UX
Replaces console logs with error handling and UI updates
Improves patient search by removing API calls for filtering
Fetches patient details dynamically for appointments display
Enhances session logout flow with a session expiration popup
Cleans up unused styles and minor CSS improvements

--- a/styles/dashboard/style.css
+++ b/styles/dashboard/style.css
@@ -1,10 +1,4 @@
 /* // */
-/* ! Body Wrapper ! */
-.wrapper {
-    /* display: flex; */
-}
-/* // */
-/* // */
 /* ! Nav Bar ! */
 aside {
     width: 250px;
@@ -175,6 +169,10 @@ li a:hover, .logout:hover {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     z-index: 1900;
     text-align: center;
+
+    h2 {
+        color: black !important;
+    }
 }
 
 #overlay-inactive-modal {
